Update SharedSecrets location.